syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc AddUser(UserRequest) returns (UserResponse);
  rpc AddUsers(BulkUserRequest) returns (BulkUserResponse);
  rpc GetUser(UserId) returns (UserResponse);
  rpc UpdateUser(UserRequest) returns (UserResponse);
  rpc DeleteUser(UserId) returns (DeleteResponse);
  rpc SearchUsers(SearchRequest) returns (UserListResponse);
  rpc BulkDelete(BulkUserIds) returns (DeleteResponse);
}

message UserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message UserId {
  string id = 1;
}

message BulkUserRequest {
  repeated UserRequest users = 1;
}

message BulkUserIds {
  repeated string ids = 1;
}

message SearchRequest {
  string pattern = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message BulkUserResponse {
  repeated UserResponse users = 1;
}

message DeleteResponse {
  string status = 1;
}
